Feature/create devices update (#147)
* Create event accepts lists implemented and tested

* Create Devices creates a creation event and requires loc_name

* create_event optional event_data parameter added

* Update swagger

* Removed unused import

* Create Event no longer does redundant add_or_update_user calls

---------
