# backend/controllers/device_controller.py
@@ -1,8 +1,8 @@
-
-
 from typing import Union, Optional
 
+from datetime import datetime
 from flask import jsonify, request, Response
+from backend.controllers.event_controller import create_event
 from backend.models.device_model import Device
 from backend.utils.qr_generator import generate_qr, remove_qr
 
@@ -26,14 +26,17 @@ def create_devices() -> tuple[Response, int]:
         return jsonify({'error': "Received an empty list of devices"}), 400
 
     device_list = []
+    device_list_with_location = []
     for item in device_json:
-        if not all(key in item for key in ('dev_name', 'dev_manufacturer', 'dev_model',
-                                           'dev_class', 'dev_comments')):
+        if not all(key in item for key in ('dev_name', 'dev_manufacturer',
+                                           'dev_model', 'dev_class',
+                                           'dev_location', 'dev_comments')):
             return (jsonify({'error': "All devices must have"
                                       " name,"
                                       " manufacturer,"
                                       " model,"
-                                      " class and comments"}),
+                                      " class,"
+                                      " location and comments"}),
                     400)
 
         new_device = Device(dev_name=item['dev_name'],
@@ -43,15 +46,35 @@ def create_devices() -> tuple[Response, int]:
                             dev_comments=item['dev_comments'])
 
         device_list.append(new_device)
+        device_list_with_location.append((new_device, item['dev_location']))
 
-    database_response = Device.create_devices(device_list)
-    if database_response[0]:
-        for device in device_list:
-            generate_qr(device.dev_id)
+    dev_db_success, dev_db_error = Device.create_devices(device_list)
+    if not dev_db_success:
+        return jsonify({'error': f"Database error: {dev_db_error}"}), 500
 
-        return jsonify({'message': "Devices created successfully"}), 201
-    else:
-        return jsonify({'error': f"Database error: {database_response[1]}"}), 500
+    home_event_list = []
+    for device, location in device_list_with_location:
+        generate_qr(device.dev_id)
+        new_event_json = {
+            'dev_id': device.dev_id,
+            'user': {
+                'user_name': 'admin',
+                'user_email': 'admin@admin'
+            },
+            'move_time': datetime.now().strftime('%Y-%m-%d %H:%M:%S'),
+            'loc_name': location,
+            'comment': ''
+        }
+        home_event_list.append(new_event_json)
+
+    event_response, event_status_code = create_event(home_event_list)
+
+    if event_status_code != 201:
+        print(event_response.get_json())
+        return jsonify({'message': "Devices created successfully, "
+                                   "but creation events failed"}), 207
+
+    return jsonify({'message': "Devices created successfully"}), 201
 
 
 def get_device_by_id(dev_id: int) -> tuple[Response, int]:
